# xbitos

./: Cargo.toml
config/: hyprland.conf
src/: lib.rs  main.rs
src/docs/: mod.rs
src/system/: audio.rs  backup.rs  bootloader.rs  builder.rs  display.rs  distro.rs  init.rs  installer.rs  iso_builder.rs  kernel.rs  login.rs  mod.rs  network.rs  package_manager.rs  power.rs  services.rs  software.rs  storage.rs  theming.rs  updates.rs
src/system/gui/: software_center.rs
src/system/packaging/: builder.rs
src/system/security/: apparmor.rs  firewall.rs  mod.rs  package_verifier.rs
src/testing/: mod.rs  security_tests.rs
