[package]
name = "xBitOS"
version = "0.1.0"
edition = "2021"

[dependencies]
# للتعامل مع العمليات والأوامر
tokio = { version = "1.28", features = ["full"] }
# للتعامل مع الملفات والمجلدات
fs_extra = "1.3"
# للتعامل مع المسارات
path-clean = "1.0"
# للتسجيل والتتبع
log = "0.4"
env_logger = "0.10"

# مكتبات إضافية
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
which = "4.4"
anyhow = "1.0"
