[package]
name = "xbitos"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xbitos"
path = "src/main.rs"

[[bin]]
name = "build-iso"
path = "src/bin/build_iso.rs"

[dependencies]
# للتعامل مع العمليات والأوامر
tokio = { version = "1.0", features = ["full"] }
# للتعامل مع الملفات والمجلدات
fs_extra = "1.3"
# للتعامل مع المسارات
path-clean = "1.0"
# للتسجيل والتتبع
log = "0.4"
env_logger = "0.10"

# مكتبات إضافية
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
which = "4.4"
anyhow = { version = "1.0", features = ["backtrace"] }
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
# نزيل gtk4 مؤقتاً
